--- a/web.config
+++ b/web.config
@@ -47,19 +47,26 @@
         <add assembly="stdole, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>-->
         <!--<add assembly="CrystalDecisions.ReportSource, Version=13.0.9.1312, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
         <add assembly="CrystalDecisions.Shared, Version=13.0.9.1312, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
-        --><!--<add assembly="CrystalDecisions.Web, Version=13.0.9.1312, Culture=neutral, PublicKeyToken=692fbea5521e1304"  namespace="CrystalDecisions.Web" tagprefix="CR" />--><!--
+        -->
+        <!--<add assembly="CrystalDecisions.Web, Version=13.0.9.1312, Culture=neutral, PublicKeyToken=692fbea5521e1304"  namespace="CrystalDecisions.Web" tagprefix="CR" />-->
+        <!--
         <add assembly="CrystalDecisions.Web, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="CrystalDecisions.ReportAppServer.ClientDoc, Version=13.0.9.1312, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
         <add assembly="CrystalDecisions.Enterprise.Framework,Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="CrystalDecisions.Enterprise.InfoStore, Version=13.0.9.1312, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
         <add assembly="CrystalDecisions.CrystalReports.Engine, Version=13.0.9.1312, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
         <add assembly="stdole, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>-->
+        <!--<add assembly="CrystalDecisions.CrystalReports.Engine, Version=13.0.9.1312, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+        <add assembly="CrystalDecisions.ReportSource, Version=13.0.9.1312, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+        <add assembly="CrystalDecisions.Shared, Version=13.0.9.1312, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+        <add assembly="CrystalDecisions.Web, Version=13.0.9.1312, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+        <add assembly="CrystalDecisions.ReportAppServer.ClientDoc, Version=13.0.9.1312, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
+        <add assembly="CrystalDecisions.ReportAppServer.ClientDoc, Version=13.0.9.1312, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>-->
         <add assembly="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
-        <add assembly="CrystalDecisions.ReportSource, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+        <add assembly="CrystalDecisions.ReportSource, Version=13.0.9.1312, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="CrystalDecisions.Web, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
-        <add assembly="CrystalDecisions.ReportAppServer.ClientDoc, Version=13.0.9.1312, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
-        <add assembly="CrystalDecisions.ReportAppServer.ClientDoc, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+        <add assembly="CrystalDecisions.ReportAppServer.ClientDoc, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
       </assemblies>
     </compilation>
     <httpHandlers>
