--- a/web.config
+++ b/web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!-- 
     Note: As an alternative to hand editing this file you can use the 
     web admin tool to configure settings for your application. Use
@@ -9,9 +9,9 @@
 -->
 <configuration>
   <connectionStrings>
-    <add name="sqlcnxProiectus" connectionString="Data Source=10.0.0.220,1437;Initial Catalog=IMASD2_0;Persist Security Info=True;Connect Timeout=6;User ID=USR_IMASD; Password=IMASD_2013140213" providerName="System.Data.SqlClient"/>
-    <!--<add name="sqlcnxProiectus" connectionString="Data Source=SAUCE;Initial Catalog=IMASD2_0;User ID=USR_PROIECTUS_0001;Password=p&amp;013ctu$;Connect Timeout=10"
-         providerName="System.Data.SqlClient" />-->
+    <!--<add name="sqlcnxProiectus" connectionString="Data Source=10.0.0.220,1437;Initial Catalog=IMASD2_0;Persist Security Info=True;Connect Timeout=6;User ID=USR_IMASD; Password=IMASD_2013140213" providerName="System.Data.SqlClient"/>
+    <add name="IMASD2_0ConnectionString" connectionString="Data Source=ULQUIORRA-PC\MSSQLSERVER2;Initial Catalog=IMASD2_0;Persist Security Info=True;User ID=sa;Password=Ulquiorra2505" providerName="System.Data.SqlClient"/>-->
+    <add name="sqlcnxProiectus" connectionString="Data Source=ULQUIORRA-PC\MSSQLSERVER2;Initial Catalog=IMASD2_0;Persist Security Info=True;User ID=sa;Password=Ulquiorra2505" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -21,8 +21,6 @@
         <httpRuntime targetFramework="4.5" />
       </system.Web>
   -->
-  
-  
   <system.web>
     <httpRuntime maxRequestLength="1048576"/>
     <sessionState mode="InProc" cookieless="false" timeout="15000"/>
@@ -75,10 +73,16 @@
         <add assembly="CrystalDecisions.ReportAppServer.ClientDoc, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
         <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
         <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91"/>
+        <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91"/>
+        <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
       </assemblies>
     </compilation>
     <httpHandlers>
       <add verb="GET" path="CrystalImageHandler.aspx" type="CrystalDecisions.Web.CrystalImageHandler, CrystalDecisions.Web, Version=10.2.3600.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, 
+           Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false" />
     </httpHandlers>
     <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
       <namespaces>
@@ -185,7 +189,11 @@
   </location>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
-  </system.webServer>
+    <handlers>
+      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd"
+     type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+    </handlers>
+   </system.webServer>
   <location allowOverride="true" inheritInChildApplications="true">
     <appSettings>
       <add key="ServidorMail" value="10.254.253.1"/>
